center articles and fix spacing on article view

--- a/src/components/css/ArticleGrid.css
+++ b/src/components/css/ArticleGrid.css
@@ -7,10 +7,5 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  max-width: 1400px;
+  margin: auto;
 }
-
-/* .article-grid::after {
-  content: "";
-  flex: ;
-} */
